--- a/src/fxml/customerHome.fxml
+++ b/src/fxml/customerHome.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -30,7 +31,7 @@
                <children>
                   <HBox alignment="CENTER_RIGHT" prefHeight="51.0" prefWidth="532.0">
                      <children>
-                        <Button mnemonicParsing="false" styleClass="topNavButton">
+                        <Button fx:id="curtButton" graphicTextGap="0.0" mnemonicParsing="false" styleClass="topNavButton" text="0">
                            <graphic>
                               <ImageView fitHeight="28.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -39,7 +40,7 @@
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button mnemonicParsing="false" styleClass="topNavButton">
+                        <Button mnemonicParsing="false" onAction="#showuser" styleClass="topNavButton">
                            <graphic>
                               <ImageView fitHeight="28.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -95,7 +96,12 @@
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
                   </HBox>
-                  <ListView fx:id="foodList" prefHeight="328.0" prefWidth="468.0" />
+                  <ListView fx:id="foodList" prefHeight="34.0" prefWidth="532.0" />
+                  <ScrollPane hbarPolicy="NEVER" prefHeight="249.0" prefWidth="532.0">
+                    <content>
+                        <VBox fx:id="foodList1" prefHeight="245.0" prefWidth="518.0" />
+                    </content>
+                  </ScrollPane>
                </children>
             </VBox>
          </center>
