--- a/src/fxml/food.fxml
+++ b/src/fxml/food.fxml
@@ -3,21 +3,22 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="93.0" prefWidth="518.0" style="-fx-border-width: 0 0 2 0; -fx-border-color: #1E90FF;" stylesheets="@../css/auth.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FoodController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="82.0" prefWidth="518.0" style="-fx-border-width: 0 0 2 0; -fx-border-color: #1E90FF;" stylesheets="@../css/auth.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.FoodController">
    <children>
       <HBox prefHeight="82.0" prefWidth="518.0">
          <children>
-            <VBox prefHeight="64.0" prefWidth="392.0">
+            <VBox prefHeight="70.0" prefWidth="402.0">
                <children>
                   <Label fx:id="foodName" prefHeight="26.0" prefWidth="370.0" text="Label">
                      <font>
-                        <Font name="System Bold" size="20.0" />
+                        <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
                   <Label fx:id="foodCategory" prefWidth="300.0" text="Label">
@@ -29,26 +30,51 @@
                      <VBox.margin>
                         <Insets top="6.0" />
                      </VBox.margin>
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
                   </Label>
                </children>
             </VBox>
-            <VBox prefHeight="200.0" prefWidth="100.0">
+            <VBox prefHeight="70.0" prefWidth="99.0">
                <children>
                   <Label fx:id="foodPrice" alignment="CENTER" prefHeight="27.0" prefWidth="102.0" text="Label">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Button mnemonicParsing="false" onAction="#addToCart" prefHeight="38.0" prefWidth="102.0" styleClass="buttons" text="Add To Cart">
+                  <Button fx:id="addButton" graphicTextGap="0.0" mnemonicParsing="false" onAction="#addToCart" prefHeight="38.0" prefWidth="97.0" styleClass="logoButtons" text="Add To Cart">
                      <VBox.margin>
                         <Insets top="5.0" />
                      </VBox.margin>
+                     <graphic>
+                        <ImageView fitHeight="21.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/plus.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <font>
+                        <Font size="10.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="removeButton" graphicTextGap="0.0" mnemonicParsing="false" onAction="#removeFromCart" prefHeight="38.0" prefWidth="97.0" styleClass="logoButtons" text="Remove">
+                     <graphic>
+                        <ImageView fitHeight="21.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../images/plus.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <font>
+                        <Font size="10.0" />
+                     </font>
                   </Button>
                </children>
             </VBox>
          </children>
          <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
          </padding>
       </HBox>
    </children>
