--- a/src/fxml/restaurantHome.fxml
+++ b/src/fxml/restaurantHome.fxml
@@ -4,6 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
@@ -14,14 +15,21 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="737.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CustomerHomeController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="446.0" prefWidth="737.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.RestaurantHomeController">
    <children>
       <BorderPane layoutX="166.0" layoutY="109.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <left>
             <VBox prefHeight="446.0" prefWidth="200.0" styleClass="leftNavbar" BorderPane.alignment="CENTER">
                <children>
-                  <Button mnemonicParsing="false" prefWidth="200.0" styleClass="curButton" text="Home" />
-                  <Button mnemonicParsing="false" onAction="#showMyOrder" prefWidth="200.0" styleClass="navButton" text="My Orders" />
+                  <Button contentDisplay="RIGHT" mnemonicParsing="false" prefWidth="200.0" styleClass="curButton" text="Foods" />
+                  <Button contentDisplay="RIGHT" mnemonicParsing="false" onAction="#showMyOrder" prefWidth="200.0" styleClass="navButton" text="Orders">
+                     <graphic>
+                        <Label fx:id="newOrderCount" alignment="CENTER" minWidth="27.0" prefHeight="27.0" style="-fx-background-color: #12599f; -fx-padding: 5; -fx-background-radius: 50; -fx-border-color: transparant; -fx-text-fill: white;" text="100">
+                           <padding>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </padding>
+                        </Label>
+                     </graphic></Button>
                   <Button mnemonicParsing="false" prefWidth="200.0" styleClass="navButton" text="Button" />
                </children>
             </VBox>
@@ -29,13 +37,13 @@
          <center>
             <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
                <children>
-                  <HBox alignment="CENTER_RIGHT" prefHeight="35.0" prefWidth="538.0">
+                  <HBox alignment="CENTER_RIGHT" prefHeight="51.0" prefWidth="532.0">
                      <children>
-                        <Button fx:id="curtButton" graphicTextGap="0.0" mnemonicParsing="false" onAction="#showCart" styleClass="topNavButton" text="0">
+                        <Button mnemonicParsing="false" onAction="#showAddNewFood" prefHeight="38.0" prefWidth="135.0" styleClass="logoButtons" text="Add New Food">
                            <graphic>
-                              <ImageView fitHeight="28.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="25.0" fitWidth="101.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../images/cart.png" />
+                                    <Image url="@../images/plus.png" />
                                  </image>
                               </ImageView>
                            </graphic>
@@ -48,10 +56,13 @@
                                  </image>
                               </ImageView>
                            </graphic>
+                           <HBox.margin>
+                              <Insets left="20.0" />
+                           </HBox.margin>
                         </Button>
                      </children>
                   </HBox>
-                  <HBox alignment="CENTER_LEFT" prefHeight="47.0" prefWidth="538.0">
+                  <HBox alignment="CENTER_LEFT" prefHeight="47.0" prefWidth="532.0">
                      <children>
                         <VBox fx:id="foodInfo" prefHeight="95.0" prefWidth="382.0">
                            <children>
