--- a/src/fxml/restaurantOrders.fxml
+++ b/src/fxml/restaurantOrders.fxml
@@ -4,7 +4,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -41,7 +40,7 @@
                <children>
                   <HBox alignment="CENTER_RIGHT" prefHeight="51.0" prefWidth="532.0">
                      <children>
-                        <Button mnemonicParsing="false" onAction="#showuser" styleClass="topNavButton">
+                        <Button mnemonicParsing="false" onAction="#showuser" styleClass="userButton">
                            <graphic>
                               <ImageView fitHeight="28.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -55,10 +54,9 @@
                         </Button>
                      </children>
                   </HBox>
-                  <ListView fx:id="orderList" prefHeight="34.0" prefWidth="532.0" />
-                  <ScrollPane hbarPolicy="NEVER" prefHeight="362.0" prefWidth="538.0">
+                  <ScrollPane hbarPolicy="NEVER" prefHeight="398.0" prefWidth="538.0">
                     <content>
-                        <VBox fx:id="orderList1" prefHeight="358.0" prefWidth="526.0" />
+                        <VBox fx:id="orderList1" prefHeight="390.0" prefWidth="526.0" />
                     </content>
                   </ScrollPane>
                </children>
