--- a/src/fxml/adminRestaurants.fxml
+++ b/src/fxml/adminRestaurants.fxml
@@ -4,7 +4,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -49,7 +48,7 @@
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#showuser" styleClass="topNavButton">
+                        <Button mnemonicParsing="false" onAction="#showuser" styleClass="userButton">
                            <graphic>
                               <ImageView fitHeight="28.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -70,7 +69,7 @@
                               <HBox fx:id="byName" alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="334.0">
                                  <children>
                                     <TextField fx:id="resStr" onKeyPressed="#searchRestaurant" prefHeight="38.0" prefWidth="333.0" styleClass="textField" />
-                                    <Button mnemonicParsing="false" onAction="#searchRestaurant" prefHeight="14.0" prefWidth="49.0" styleClass="topNavButton">
+                                    <Button mnemonicParsing="false" onAction="#searchRestaurant" prefHeight="14.0" prefWidth="49.0" styleClass="searchButton">
                                        <graphic>
                                           <ImageView fitHeight="28.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -89,7 +88,6 @@
                         <Insets bottom="5.0" left="10.0" right="10.0" />
                      </padding>
                   </HBox>
-                  <ListView fx:id="resList" prefHeight="34.0" prefWidth="532.0" />
                   <ScrollPane hbarPolicy="NEVER" prefHeight="400.0" prefWidth="538.0">
                     <content>
                         <VBox fx:id="resList1" prefHeight="339.0" prefWidth="522.0" />
