--- a/src/fxml/customerHome.fxml
+++ b/src/fxml/customerHome.fxml
@@ -4,7 +4,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -31,7 +30,7 @@
                <children>
                   <HBox alignment="CENTER_RIGHT" prefHeight="35.0" prefWidth="538.0">
                      <children>
-                        <Button fx:id="curtButton" graphicTextGap="0.0" mnemonicParsing="false" onAction="#showCart" styleClass="topNavButton" text="0">
+                        <Button fx:id="curtButton" graphicTextGap="0.0" mnemonicParsing="false" onAction="#showCart" styleClass="cartButton" text="0">
                            <graphic>
                               <ImageView fitHeight="28.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -40,7 +39,7 @@
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#showuser" styleClass="topNavButton">
+                        <Button mnemonicParsing="false" onAction="#showuser" styleClass="userButton">
                            <graphic>
                               <ImageView fitHeight="28.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -58,7 +57,7 @@
                               <HBox fx:id="byName" alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="334.0">
                                  <children>
                                     <TextField fx:id="foodName" onKeyPressed="#searchFood" prefHeight="38.0" prefWidth="333.0" styleClass="textField" />
-                                    <Button mnemonicParsing="false" onAction="#searchFood" prefHeight="14.0" prefWidth="49.0" styleClass="topNavButton">
+                                    <Button mnemonicParsing="false" onAction="#searchFood" prefHeight="14.0" prefWidth="49.0" styleClass="searchButton">
                                        <graphic>
                                           <ImageView fitHeight="28.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -77,7 +76,7 @@
                                           <Insets left="20.0" />
                                        </HBox.margin>
                                     </TextField>
-                                    <Button mnemonicParsing="false" onAction="#searchFood" prefHeight="14.0" prefWidth="49.0" styleClass="topNavButton">
+                                    <Button mnemonicParsing="false" onAction="#searchFood" prefHeight="14.0" prefWidth="49.0" styleClass="searchButton">
                                        <graphic>
                                           <ImageView fitHeight="28.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -96,7 +95,6 @@
                         <Insets bottom="5.0" left="10.0" right="10.0" />
                      </padding>
                   </HBox>
-                  <ListView fx:id="foodList" prefHeight="34.0" prefWidth="532.0" />
                   <ScrollPane hbarPolicy="NEVER" prefHeight="400.0" prefWidth="532.0">
                     <content>
                         <VBox fx:id="foodList1" prefHeight="290.0" prefWidth="522.0" />
