--- a/src/fxml/restaurant.fxml
+++ b/src/fxml/restaurant.fxml
@@ -35,7 +35,7 @@
                      <graphic>
                         <ImageView fitHeight="21.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../images/plus.png" />
+                              <Image url="@../images/edit.png" />
                            </image>
                         </ImageView>
                      </graphic>
