--- a/src/fxml/restaurantHome.fxml
+++ b/src/fxml/restaurantHome.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -61,7 +60,7 @@
                               </ImageView>
                            </graphic>
                         </Button>
-                        <Button mnemonicParsing="false" onAction="#showuser" styleClass="topNavButton">
+                        <Button mnemonicParsing="false" onAction="#showuser" styleClass="userButton">
                            <graphic>
                               <ImageView fitHeight="28.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -82,7 +81,7 @@
                               <HBox fx:id="byName" alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="334.0">
                                  <children>
                                     <TextField fx:id="foodName" onKeyPressed="#searchFood" prefHeight="38.0" prefWidth="333.0" styleClass="textField" />
-                                    <Button mnemonicParsing="false" onAction="#searchFood" prefHeight="14.0" prefWidth="49.0" styleClass="topNavButton">
+                                    <Button mnemonicParsing="false" onAction="#searchFood" prefHeight="14.0" prefWidth="49.0" styleClass="searchButton">
                                        <graphic>
                                           <ImageView fitHeight="28.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -101,7 +100,7 @@
                                           <Insets left="20.0" />
                                        </HBox.margin>
                                     </TextField>
-                                    <Button mnemonicParsing="false" onAction="#searchFood" prefHeight="14.0" prefWidth="49.0" styleClass="topNavButton">
+                                    <Button mnemonicParsing="false" onAction="#searchFood" prefHeight="14.0" prefWidth="49.0" styleClass="searchButton">
                                        <graphic>
                                           <ImageView fitHeight="28.0" fitWidth="81.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -120,10 +119,9 @@
                         <Insets bottom="5.0" left="10.0" right="10.0" />
                      </padding>
                   </HBox>
-                  <ListView fx:id="foodList" prefHeight="34.0" prefWidth="532.0" />
                   <ScrollPane hbarPolicy="NEVER" prefHeight="400.0" prefWidth="538.0">
                     <content>
-                        <VBox fx:id="foodList1" prefHeight="246.0" prefWidth="522.0" />
+                        <VBox fx:id="foodList1" prefHeight="286.0" prefWidth="522.0" />
                     </content>
                   </ScrollPane>
                </children>
